--- a/styles/global.css
+++ b/styles/global.css
@@ -25,6 +25,11 @@ blockquote {
   padding: 0;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-size: inherit;
+  font-weight: inherit;
+}
+
 a {
   color: inherit;
 }
