--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,315 @@
-/* место для вашего кода */
+.header {
+    margin: 92px 24px 92px;
+    display: grid;
+    grid-template-columns: 3fr 1fr 3fr;
+    place-items: center;
+}
+
+.header__menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    column-gap: 33px;
+    line-height: 21px;
+    font-size: 18px;
+    list-style: circle;
+}
+
+.header__link {
+    text-decoration: none;
+    list-style-type: none;
+}
+
+.header__links-list-item_no-bullit{
+    text-decoration: none;
+}
+
+.header__link_active {
+    text-underline-offset: 4px;
+    text-decoration-thickness: 0;
+}
+
+.contacts {
+    font-size: 18px;
+    line-height: 135%;
+    letter-spacing: 0.01em;
+    font-style: normal;
+    display: flex;
+    flex-direction: column;
+    margin-right: 13%;
+    justify-self: end;
+}
+
+.cover {
+    margin: 0 0 179px;
+    background-image: url(../images/cover.jpg);
+    color: #FFFFFF;
+    background-size: 124% 100%;
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    position: relative;
+}
+
+.overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0, .5);
+    z-index: 2;
+    position: relative;
+}
+
+.cover__title {
+    font-size: 100px;
+    line-height: 121%;
+    letter-spacing: 0.3em;
+    text-transform: uppercase;
+    font-weight: 800;
+    padding: 165px 50px 128px;
+    position: relative;
+    z-index: -1;
+}
+
+.aligned-text {
+    display: block;
+    letter-spacing: 30px;
+}
+
+.aligned-text_center {
+    text-align: center;
+}
+
+.aligned-text_right {
+    text-align: right;
+    margin-right: -30px;
+}
+
+.letter-spacing-extended {
+    padding: 0 30px;
+}
+
+.cover__description {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 50px;
+    z-index: -2;
+    position: relative;
+    margin: 0 50px;
+}
+
+.cover__description-text {
+    font-size: 22px;
+    line-height: 127%;
+    text-transform: uppercase;
+    word-spacing: 19px;
+    padding-left: 26px;
+}
+
+.bet-button {
+    background-color: transparent;
+    color: #FFFFFF;
+    font-family: 'Raleway';
+    font-size: 22px;
+    line-height: 26px;
+    text-align: center;
+    text-transform: uppercase;
+    padding: 12px 31px;
+    border: 1px solid rgba(255, 255, 255, 1);
+}
+
+.lots {
+    margin: 0 24px 170px;
+}
+
+.lots__heading {
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 47px;
+    text-transform: uppercase;
+}
+
+h2 {
+    margin: 0 auto 27px 40px;
+}
+
+.lots__card-list {
+    display: flex;
+    column-gap: 25px;
+    margin-bottom: 30px;
+}
+
+.lots__card-list-item {
+    list-style-type: none;
+
+    flex-grow: 1;
+}
+
+.card-link {
+    text-decoration: none;
+    list-style-type: none;
+    display: block;
+    height: 100%;
+    z-index: -2;
+    position: relative;
+}
+
+.card {
+    color: #FFFFFF;
+    padding: 51px 40px 48px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 334px;
+    min-height: 563px;
+    position: relative;
+}
+
+.card_type_film {
+    background-image: url(../images/card-lot-01.jpg);
+    background-size: cover;
+    background-position: center;
+    text-align: center;
+}
+
+.card_type_book {
+    background-image: url(../images/card-lot-02.jpg);
+    background-size: cover;
+    background-position: center;
+    text-align: center;
+    z-index: -2;
+    position: relative;
+}
+
+.card_type_picture {
+    background-image: url(../images/card-lot-03.jpg);
+    background-size: cover;
+    background-position: center;
+    text-align: center;
+    z-index: -2;
+    position: relative;
+}
+
+.card__title {
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 117%;
+    text-decoration-line: underline;
+    text-transform: uppercase;
+    text-underline-offset: 4px;
+    text-decoration-thickness: 0;
+    z-index: -2;
+    position: relative;
+    text-align: left;
+}
+
+.card__text {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 120%;
+    z-index: -3;
+    position: relative;
+    text-align: left;
+}
+
+.lots__look-more-link {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    text-underline-offset: 4px;
+    text-decoration-thickness: 0;
+    text-decoration-line: underline;
+    margin-left: 40px;
+}
+
+.about {
+    margin: 0 24px 201px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 49% 53%;
+    place-items: center;
+    column-gap: 2%;
+}
+
+.about__logo {
+    grid-row: 1;
+    grid-column: 1;
+    background-color: #000000; 
+    width: 240px; 
+    height: 240px;
+    border-radius: 125px;
+    display: flex;
+    align-items: center;
+}
+
+.about__logo-image {
+    width: 148px; 
+    height: 114px;
+    margin: auto;
+}
+
+.about__title {
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 47px;
+    text-transform: uppercase;
+    grid-row: 1;
+    grid-column: 2;
+    justify-self: start;
+    margin-left: 1%;
+}
+
+.about__text {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 120%;
+    letter-spacing: 0.001em;
+    grid-row: 2/3;
+    grid-column: 2/4;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    row-gap: 24px;
+    margin-left: 3px;
+}
+
+footer {
+    margin: 0 50px 88px;
+    display: grid;
+    grid-template-columns: 25% 15% 20% 40%;
+    justify-items: center;
+}
+
+.footer__menu {
+    display: flex;
+    justify-content: space-between;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    grid-column: 3;
+}
+
+.footer__menu-list{
+    list-style-type: none; 
+}
+
+.footer__menu-link_active {
+    text-decoration: none;
+}
+
+.footer__menu-link {
+    text-underline-offset: 4px;
+    text-decoration-thickness: 0;
+}
+
+.footer__social-list {
+    display: flex;
+    justify-content: space-around;
+    column-gap: 47px;
+    justify-self: end;
+}
+
+.footer__social-icon {
+    width: 48px;
+    height: 48px;
+}
