--- a/styles/global.css
+++ b/styles/global.css
@@ -7,7 +7,7 @@
 body {
   width: 1100px;
   margin: 0 auto;
-  font-family: Raleway, sans-serif;
+  font-family: Raleway, "Arial", sans-serif;
 }
 
 h1,
@@ -20,6 +20,7 @@ p,
 ul,
 ol,
 li,
+span,
 blockquote {
   margin: 0;
   padding: 0;
