--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@
     list-style: circle;
 }
 
-.header__link {
+.link {
     text-decoration: none;
     list-style-type: none;
 }
@@ -24,9 +24,14 @@
     text-decoration: none;
 }
 
-.header__link_active {
+.link_active {
     text-underline-offset: 4px;
     text-decoration-thickness: 0;
+}
+
+.logo {
+    width: 148px; 
+    height: 105px
 }
 
 .contacts {
@@ -53,9 +58,9 @@
 .overlay {
     width: 100%;
     height: 100%;
-    background-color: rgb(0, 0, 0, .5);
+    background: rgba(0, 0, 0, 0.6);
     z-index: 2;
-    position: relative;
+    position: absolute;
 }
 
 .cover__title {
@@ -66,12 +71,12 @@
     font-weight: 800;
     padding: 165px 50px 128px;
     position: relative;
-    z-index: -1;
+    z-index: 2;
+    letter-spacing: 30px;
 }
 
 .aligned-text {
     display: block;
-    letter-spacing: 30px;
 }
 
 .aligned-text_center {
@@ -80,11 +85,14 @@
 
 .aligned-text_right {
     text-align: right;
-    margin-right: -30px;
 }
 
 .letter-spacing-extended {
     padding: 0 30px;
+}
+
+.letter-spacing-none {
+    letter-spacing: 0;
 }
 
 .cover__description {
@@ -92,7 +100,7 @@
     justify-content: space-between;
     align-items: center;
     padding-bottom: 50px;
-    z-index: -2;
+    z-index: 2;
     position: relative;
     margin: 0 50px;
 }
@@ -108,7 +116,6 @@
 .bet-button {
     background-color: transparent;
     color: #FFFFFF;
-    font-family: 'Raleway';
     font-size: 22px;
     line-height: 26px;
     text-align: center;
@@ -126,9 +133,6 @@
     font-size: 40px;
     line-height: 47px;
     text-transform: uppercase;
-}
-
-h2 {
     margin: 0 auto 27px 40px;
 }
 
@@ -140,7 +144,6 @@ h2 {
 
 .lots__card-list-item {
     list-style-type: none;
-
     flex-grow: 1;
 }
 
@@ -149,7 +152,7 @@ h2 {
     list-style-type: none;
     display: block;
     height: 100%;
-    z-index: -2;
+    z-index: 1;
     position: relative;
 }
 
@@ -162,7 +165,9 @@ h2 {
     justify-content: space-between;
     width: 334px;
     min-height: 563px;
+    z-index: 2;
     position: relative;
+    text-align: left;
 }
 
 .card_type_film {
@@ -177,8 +182,6 @@ h2 {
     background-size: cover;
     background-position: center;
     text-align: center;
-    z-index: -2;
-    position: relative;
 }
 
 .card_type_picture {
@@ -186,8 +189,6 @@ h2 {
     background-size: cover;
     background-position: center;
     text-align: center;
-    z-index: -2;
-    position: relative;
 }
 
 .card__title {
@@ -198,18 +199,12 @@ h2 {
     text-transform: uppercase;
     text-underline-offset: 4px;
     text-decoration-thickness: 0;
-    z-index: -2;
-    position: relative;
-    text-align: left;
 }
 
 .card__text {
     font-weight: 400;
     font-size: 20px;
     line-height: 120%;
-    z-index: -3;
-    position: relative;
-    text-align: left;
 }
 
 .lots__look-more-link {
