--- a/styles/style.css
+++ b/styles/style.css
@@ -30,8 +30,8 @@
 }
 
 .logo {
-    width: 148px; 
-    height: 105px
+    width: 148px;
+    height: 105px;
 }
 
 .contacts {
@@ -66,7 +66,6 @@
 .cover__title {
     font-size: 100px;
     line-height: 121%;
-    letter-spacing: 0.3em;
     text-transform: uppercase;
     font-weight: 800;
     padding: 165px 50px 128px;
