--- a/styles/style.css
+++ b/styles/style.css
@@ -61,6 +61,10 @@
     background: rgba(0, 0, 0, 0.6);
     z-index: 2;
     position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
 }
 
 .cover__title {
